(fix) duration input alignment

--- a/src/styles/Create.module.css
+++ b/src/styles/Create.module.css
@@ -1,4 +1,4 @@
-.duration {
+.duration, .inline {
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -68,7 +68,7 @@
 
 .durationInput {
     align-items: center;
-    width: 100%;
+    width: 50%;
     display: flex;
     flex-direction: row;
 }
